assets/css/parts/comments.css
.comments-title {
    font-size: var(--font-size-h1);
    text-align: center;
    font-weight: var(--font-weight-bolder);
    margin-top: 60px;
    margin-bottom: 60px;
}

.comment-list {
    list-style: none;
    padding: 0;
}

.fn {
    font-size: var(--font-size-h6);
    margin-bottom: 5px;
}

.avatar {
    margin-right: 15px;
    border-radius: 50%;
}

.comment {
    margin-bottom: 80px;
}

.comment-author.vcard {
    margin-bottom: 5px;
}

/**
 * Comment link.
 */
.reply {
    text-align: right;
}

.comment-reply-link {
    background-color: var(--color-secondary);
    color: var(--color-white);
    padding: 0 15px;
    border-radius: var(--radius-strong);
    display: inline-flex;
    justify-content: right;
    align-items: center;
    box-shadow: var(--box-shadow-default);
}

.comment-reply-link:hover {
    border: none;
    box-shadow: var(--box-shadow-strong);
}


.comment-reply-link img {
    margin-top: 5px;
    margin-left: 5px;
}

.comment-metadata {
    line-height: 20px;
}

.comment-metadata .fn a {
    color: var(--color-quaternary);
}

.comment-metadata a:hover {
    color: var(--color-secondary);
    border: none;
}

.comment-metadata b,
.comment-metadata time {
    display: block;
}

.comment-metadata time {
    color: var(--color-grayer);
    font-size: var(--font-size-caption);
}

.comment-link {
    color: var(--color-grayer);
}

.comment-link:hover {
    color: var(--color-black);
    border-bottom: none;
}

.comment-actions {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px 0 20px 0;
    font-size: var(--font-size-caption);
}

/**
 * Comment content.
 */
.comment-body {
    margin-bottom: 35px;
    word-break: break-word;
}

.depth-1 > .comment-body {
    box-shadow: var(--box-shadow-default);
    padding: 20px 20px 10px 20px;
}

.depth-2 .comment-body {
    margin-bottom: 25px;
}

.depth-2 > article > .comment-content {
    background-color: var(--color-lightgray);
    padding: 10px 30px;
}

.comment-content p {
    font-size: var(--font-size-comment);
    line-height: 30px;
    margin-bottom: 0;
}

.comment-content blockquote {
    padding: 10px 100px 10px 10px;
    margin-top: 5px;
}

.comment-form-note {
    white-space: normal;
}

/**
 * Comment posting.
 */

.entry-comment-leave {
    text-align: center;
}

.comment-form-comment {
    margin-top: 40px;
}

.comment-form {
    white-space: nowrap;
}

.comment-form-comment label,
.comment-form-author label,
.comment-form-email label,
.comment-form-url label {
    display: block;
    font-weight: var(--font-weight-bold);
    text-align: left;
}

.comment-subscription-form label,
.comment-form-cookies-consent label {
    font-size: var(--font-size-label);
    cursor: pointer;
    white-space: break-spaces;
}

.comment-form input.submit {
    margin-top: 15px;
}

.comment-form input:focus,
.comment-form textarea:focus {
    border: 1px solid var(--color-secondary);
}

.comment-form-author input,
.comment-form-email input,
.comment-form-url input,
.comment-form textarea {
    width: 100%;
    border-radius: var(--radius-default);
    border: 1px solid var(--color-gray);
    padding: 10px;
    font-size: var(--font-size-input);
}

@media only screen and (min-width: 992px) {
    .comment-respond {
        padding: 0 150px;
    }
}

.comment-form-author,
.comment-form-email {
    display: inline-block;
    width: 48%;
    margin: 0 4% 0 0;
}

.comment-form-author > * {
    width: 90%;
}

.comment-form-email > * {
    width: 90%;
}

input:focus, textarea:focus, select:focus {
    outline: none;
}


/**
 * Comment reply
 */
.comment-respond {
    margin-bottom: 100px;
}

.comment-reply-title small {
    display: block;
    font-size: var(--font-size-caption);
}

